--- a/app/src/main/res/layout/fragment_temperature.xml
+++ b/app/src/main/res/layout/fragment_temperature.xml
@@ -30,4 +30,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tempHeader" />
 
+    <TextView
+        android:id="@+id/tempStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/degrees"
+        app:layout_constraintVertical_bias="0.138" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
